😾🐗 Checkpoint ./views/footer.ejs:1886802/722

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -26,9 +26,9 @@
 				<div class="col-md-4">
 					<img src="<%= assetsUrl %>f3.png" alt="" class="img-fluid">
 					<h4 class="feed-title my-3">creative thoughts
-						<span>informatics</span>
+						<span>information</span>
 					</h4>
-					<p>Ras ultricies ligula sed magna Donec rutrum congue leo eget.</p>
+					<p>Be a leader in your cultural ecosystem with quality thought leadership</p>
 				</div>
 
 			</div>
@@ -54,15 +54,15 @@
           </div>
 					<div class="fv3-contact mt-3">
 						<span class="fas fa-home mr-2"></span>
-						<p>90 Street, City, State 34789.</p>
+						<p>100 First Street, San Francisco, CA 94105, USA</p>
 					</div>
 					<div class="fv3-contact">
 						<span class="fas fa-phone-volume mr-2"></span>
-						<p>+456 123 7890</p>
+						<p>(800) 588-1656</p>
 					</div>
 					<div class="fv3-contact">
 						<span class="fas fa-envelope-open mr-2"></span>
-						<a href="mailto:example@email.com" class="text-secondary">info@example.com</a>
+						<a href="mailto:info@okta.com" class="text-secondary">info@okta.com</a>
 					</div>
 				</div>
 				<!-- //footer grid1 -->
@@ -317,20 +317,14 @@ var do_login = function() {
 			});
 		});
 	</script>
-	<!-- move-top -->
-	<script src="/js/move-top.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue-resource@1.5.1"></script>
 	<!-- easing -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.1.2/jquery.easing.min.js" integrity="sha256-NBEaYAimJN8qZWE/WaylrkyQpNRfiF1PNs77yHaLsnk=" crossorigin="anonymous"></script>
-	<!-- smooth scroll -->
-	<script src="/js/SmoothScroll.min.js"></script>
 	<!--  necessary snippets for few javascript files -->
 	<script src="/js/AVBank.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <script src="/js/accountVue.js"></script>
-<!-- move-top -->
-<script src="/js/move-top.js"></script>
 <!--  necessary snippets for few javascript files -->
 <script src="/js/AVBank.js"></script>
 <!-- Bootstrap Core JavaScript -->
