🍜🐫 Checkpoint ./views/footer.ejs:1886802/722

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -54,7 +54,7 @@
           </div>
 					<div class="fv3-contact mt-3">
 						<span class="fas fa-home mr-2"></span>
-						<p>100 First Street, San Francisco, CA 94105, USA</p>
+						<p>100 1st St, SF, CA 94105</p>
 					</div>
 					<div class="fv3-contact">
 						<span class="fas fa-phone-volume mr-2"></span>
@@ -70,26 +70,10 @@
 				<div class="col-lg-3  col-sm-6 footv3-left text-lg-center my-sm-0 mt-5">
 					<h3 class="mb-3">our services</h3>
 					<ul class="list-agileits">
-						<li>
-							<a href="index">
-								quality resourcing
-							</a>
-						</li>
-						<li class="my-3">
-							<a href="about">
-								inventory tracking
-							</a>
-						</li>
-						<li class="mb-3">
-							<a href="services">
-								financial planning
-							</a>
-						</li>
-						<li>
-							<a href="contact">
-								budget friendly
-							</a>
-						</li>
+						<li><a href="index">Cohorting Exemplars</a></li>
+						<li><a href="index">Cohorting Exemplars</a></li>
+						<li><a href="index">Cohorting Exemplars</a></li>
+						<li><a href="index">Cohorting Exemplars</a></li>
 					</ul>
 				</div>
 				<!-- //footer grid2 -->
