🚁🌦 Checkpoint ./views/footer.ejs:1886802/1694 ./views/header.ejs:1886802/121

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -70,10 +70,18 @@
 				<div class="col-lg-3  col-sm-6 footv3-left text-lg-center my-sm-0 mt-5">
 					<h3 class="mb-3">our services</h3>
 					<ul class="list-agileits">
-						<li><a href="index">Cohorting Exemplars</a></li>
-						<li><a href="index">Cohorting Exemplars</a></li>
-						<li><a href="index">Cohorting Exemplars</a></li>
-						<li><a href="index">Cohorting Exemplars</a></li>
+						<li>
+              <a href="#">Cohorting Exemplars</a>
+            </li>
+						<li class="my-3">
+							<a href="#">Gesticulating Mimes</a>
+						</li>
+						<li class="mb-3">
+							<a href="#">Reticulating Splines</a>
+						</li>
+						<li>
+							<a href="#">Synthesizing Wavelets</a>
+						</li>
 					</ul>
 				</div>
 				<!-- //footer grid2 -->
@@ -109,10 +117,10 @@
 					<h3 class="mb-3">subscribe to newsletter</h3>
 					<form method="post">
 						<div class="form-group">
-							<input type="email" class="form-control  bg-dark border-0" id="email" placeholder="Enter email" name="email" required>
+							<input type="email" class="form-control  bg-dark border-0" id="email" placeholder="Enter email" name="email" required disabled>
 						</div>
 						<div class="form-group">
-							<input type="Submit" class="form-control bg-secondary text-white border-0" id="sub" value="submit" name="sub">
+							<input type="Submit" class="form-control bg-secondary text-white border-0" id="sub" value="submit" name="sub" disabled>
 						</div>
 					</form>
 				</div>
