--- a/views/header.ejs
+++ b/views/header.ejs
@@ -128,6 +128,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <button type="button" class="btn btn-danger ml-lg-5 w3ls-btn" data-toggle="modal" aria-pressed="false" data-target="#exampleModal">
               Security Settings
             </button>
+            <a class="btn btn-danger ml-lg-5 w3ls-btn" href="/logout">Logout</a>
            <% } else{ %>  
              	<button id="login" onclick="toLogin()" type="button" class="btn btn-danger ml-lg-5 w3ls-btn" data-toggle="modal" aria-pressed="false">
 								Login
