🚦😤 Checkpoint ./views/header.ejs:1886802/879 ./routes/index.js:1886802/42

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -129,12 +129,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
               Security Settings
             </button>
             <a class="btn btn-danger ml-lg-5 w3ls-btn" href="/logout">Logout</a>
-           <% } else{ %>  
+           <% } else if (locals.customLogin) { %>  
+              <button type="button" class="btn btn-danger ml-lg-5 w3ls-btn" data-toggle="modal" data-target="#exampleModal" aria-pressed="false">
+							  Custom Login
+							</button>
+           <% } else { %>  
              	<button id="login" onclick="toLogin()" type="button" class="btn btn-danger ml-lg-5 w3ls-btn" data-toggle="modal" aria-pressed="false">
 								Login
-							</button>
-              <button type="button" class="btn btn-danger ml-lg-5 w3ls-btn" data-toggle="modal" data-target="#exampleModal" aria-pressed="false">
-							  Second Login
 							</button>
           <% } %>
 						</li>
