--- a/views/single.ejs
+++ b/views/single.ejs
@@ -10,11 +10,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html lang="zxx">
 
 <head>
-  <title>AVBank Corporate Category Flat Bootstrap Responsive Website Template | Single :: w3layouts</title>
+  <title>AVBank</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
-  <meta name="keywords" content="AVBank fluid web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
-  SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+  <meta name="keywords" content="AVBank sample application for Okta" />
   <script>
   addEventListener("load", function () {
     setTimeout(hideURLbar, 0);
@@ -35,22 +34,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   <link href="//fonts.googleapis.com/css?family=Do+Hyeon" rel="stylesheet">
   <link href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
   rel="stylesheet">
-  <script
-  src="https://ok1static.oktacdn.com/assets/js/sdk/okta-signin-widget/2.9.0/js/okta-sign-in.min.js"
-  type="text/javascript"></script>
-  <link
-  href="https://ok1static.oktacdn.com/assets/js/sdk/okta-signin-widget/2.9.0/css/okta-sign-in.min.css"
-  type="text/css"
-  rel="stylesheet"/>
-
+  <script src="https://ok1static.oktacdn.com/assets/js/sdk/okta-signin-widget/2.9.0/js/okta-sign-in.min.js" type="text/javascript"></script>
+  <link href="https://ok1static.oktacdn.com/assets/js/sdk/okta-signin-widget/2.9.0/css/okta-sign-in.min.css" type="text/css" rel="stylesheet"/>
   <!-- Theme file: Customize or replace this file if you want to override our default styles -->
-  <link
-  href="https://ok1static.oktacdn.com/assets/js/sdk/okta-signin-widget/2.9.0/css/okta-theme.css"
-  type="text/css"
-  rel="stylesheet"/>
+  <link href="https://ok1static.oktacdn.com/assets/js/sdk/okta-signin-widget/2.9.0/css/okta-theme.css" type="text/css" rel="stylesheet"/>
   <!-- //webfonts -->
 </head>
-
 <body>
   <!-- header -->
   <header>
@@ -59,9 +48,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
       <nav class="navbar navbar-expand-lg navbar-light py-4">
         <!-- logo -->
         <h1>
-          <a class="navbar-brand" href="index">
-            AVBank
-          </a>
+          <a class="navbar-brand" href="index">AVBank</a>
         </h1>
         <!-- //logo -->
         <button class="navbar-toggler ml-md-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
