⛽️🙄 Checkpoint ./views/header.ejs:1886802/47

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -12,6 +12,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
 	<meta name="keywords" content="AVBank sample application for Okta" />
+  <!-- FIXME: Move this code elsewhere -->
 	<script>
 		addEventListener("load", function () {
 			setTimeout(hideURLbar, 0);
