--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,6 +1,6 @@
 	<!-- footer top -->
-	<section class="footerw3-top py-lg-5">
-		<div class="container py-md-5">
+	<section class="footerw3-top">
+		<div class="container">
 			<!-- footer top row -->
 			<div class="row py-5">
 				<div class="col-md-4">
@@ -39,7 +39,7 @@
 	<!-- footer -->
 	<footer class="py-sm-5">
 		<div class="container">
-			<div class="row py-5">
+			<div class="row">
 				<!-- footer grid1 -->
 				<div class="col-lg-3 col-sm-6">
 					<h2>
