--- a/views/index.ejs
+++ b/views/index.ejs
@@ -173,7 +173,7 @@
 						</div>
 					</div>
 					<div class="col-lg-3 col-6 team-grids">
-						<div class="our-team active">
+						<div class="our-team">
 							<div class="pic">
 								<img src="<%= assetsUrl %>t1.jpg" alt="team member" class="img-fluid" />
 							</div>
