🎗💖 Checkpoint ./views/index.ejs:1886802/1840 ./views/footer.ejs:1886802/89

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -71,13 +71,13 @@
 					<h3 class="mb-3">our services</h3>
 					<ul class="list-agileits">
 						<li>
-              <a href="#">Cohorting Exemplars</a>
+              <a href="#">Expenses</a>
             </li>
 						<li class="my-3">
-							<a href="#">Gesticulating Mimes</a>
+							<a href="#">Mortgage</a>
 						</li>
 						<li class="mb-3">
-							<a href="#">Reticulating Splines</a>
+							<a href="#">Investments</a>
 						</li>
 						<li>
 							<a href="#">Synthesizing Wavelets</a>
