--- a/views/index.ejs
+++ b/views/index.ejs
@@ -156,17 +156,14 @@
 								<img src="<%= assetsUrl %>t2.jpg" alt="team member" class="img-fluid" />
 							</div>
 							<div class="content">
-								<h3 class="title">Peter Johns</h3>
-								<span class="post">Creative Director</span>
+								<h3 class="title">Stephanie Morrow</h3>
+								<span class="post">President & CEO</span>
 								<ul class="social">
-									<li>
+                  <li>
 										<a href="#" class="fab fa-facebook-f"></a>
 									</li>
 									<li>
 										<a href="#" class="fab fa-twitter"></a>
-									</li>
-									<li>
-										<a href="#" class="fab fa-linkedin"></a>
 									</li>
 								</ul>
 							</div>
@@ -178,12 +175,9 @@
 								<img src="<%= assetsUrl %>t1.jpg" alt="team member" class="img-fluid" />
 							</div>
 							<div class="content">
-								<h3 class="title">Kelli Smith</h3>
-								<span class="post">Chairman</span>
+								<h3 class="title">Ernest Mack</h3>
+								<span class="post">Chief Operating Officer</span>
 								<ul class="social">
-									<li>
-										<a href="#" class="fab fa-facebook-f"></a>
-									</li>
 									<li>
 										<a href="#" class="fab fa-twitter"></a>
 									</li>
@@ -200,15 +194,9 @@
 								<img src="<%= assetsUrl %>t4.jpg" alt="team member" class="img-fluid" />
 							</div>
 							<div class="content">
-								<h3 class="title">Peter Johns</h3>
-								<span class="post">Executive Manager</span>
+								<h3 class="title">Monika Ibarra</h3>
+								<span class="post">Chief Information Officer</span>
 								<ul class="social">
-									<li>
-										<a href="#" class="fab fa-facebook-f"></a>
-									</li>
-									<li>
-										<a href="#" class="fab fa-twitter"></a>
-									</li>
 									<li>
 										<a href="#" class="fab fa-linkedin"></a>
 									</li>
@@ -222,8 +210,8 @@
 								<img src="<%= assetsUrl %>t3.jpg" alt="team member" class="img-fluid" />
 							</div>
 							<div class="content">
-								<h3 class="title">Peter Johns</h3>
-								<span class="post">HR Manager</span>
+								<h3 class="title">Finnian Wharton</h3>
+								<span class="post">SVP/Marketing & Communications</span>
 								<ul class="social">
 									<li>
 										<a href="#" class="fab fa-facebook-f"></a>
@@ -233,6 +221,12 @@
 									</li>
 									<li>
 										<a href="#" class="fab fa-linkedin"></a>
+									</li>
+									<li>
+										<a href="#" class="fab fa-reddit"></a>
+									</li>
+									<li>
+										<a href="#" class="fab fa-xbox"></a>
 									</li>
 								</ul>
 							</div>
