🦃🐆 Checkpoint ./views/footer.ejs:1886802/308 ./server.js:1886802/751 ./views/index.ejs:1886802/36

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -16,10 +16,8 @@
 						<span>Conact Okta</span>
 					</h4>
           <p>
-            USA: (800) 588-1656
-            
-            Europe: +44 (800) 3688930
-            
+            USA: (800) 588-1656<br>
+            Europe: +44 (800) 3688930<br>
             Australia: +61 283104484
           </p>
 				</div>
@@ -71,17 +69,17 @@
 					<h3 class="mb-3">our services</h3>
 					<ul class="list-agileits">
 						<li>
-              <a href="#">Expenses</a>
-            </li>
-						<li class="my-3">
 							<a href="#">Mortgage</a>
 						</li>
-						<li class="mb-3">
+						<li class="my-3">
 							<a href="#">Investments</a>
 						</li>
-						<li>
-							<a href="#">Synthesizing Wavelets</a>
+						<li class="mb-3">
+							<a href="#">Finance</a>
 						</li>
+						<li>
+              <a href="<%= editLink %>">Edit this sample</a>
+            </li>
 					</ul>
 				</div>
 				<!-- //footer grid2 -->
