--- a/views/index.ejs
+++ b/views/index.ejs
@@ -100,7 +100,7 @@
 						<h3 class="agile-title">30+ years of experiences</h3>
 						<ul class="list-group mt-3">
 							<li class="list-group-item border-0">
-								<i class="fas fa-check mr-3"></i>Cras justo odio</li>
+								<i class="fas fa-check mr-3"></i>Anything</li>
 							<li class="list-group-item border-0">
 								<i class="fas fa-check mr-3"></i>Dapibus ac facilisis in</li>
 							<li class="list-group-item border-0">
