🐆🤖 Checkpoint ./views/index.ejs:2932288/2311

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
 						</h3>
 					</div>
 					<h3 class="txt-w3_agile">Transform Your Dreams into Reality</h3>
-					<a class="btn btn-danger  mt-4 text-capitalize scroll" href="#w3layouts_bnrbtm" role="button">read more</a>
+					<a class="btn btn-danger  mt-4 text-capitalize scroll" href="#w3layouts_bnrbtm" role="button">Don't let your dreams be dreams</a>
 				</div>
 			</div>
 		</div>
@@ -23,13 +23,15 @@
 			<div class="row pt-lg-5">
 				<div class="col-lg-5  bb-left">
 					<span class="w3-line">what we do</span>
-					<h3 class="agile-title">about profitable investments</h3>
+					<h3 class="agile-title">about AV Bank investments</h3>
 				</div>
 				<div class="col-lg-7 mt-lg-0 mt-3 px-lg-5">
-					<p>Donec consequat sapien ut leo cursus rhoncus. Nullam dui mi, vulputate ac metus at, semper varius orci. Nulla accumsan
-						ac elit in congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos Class aptent taciti
-						sociosqu ad litora torquent p himenaeos.</p>
-					<a class="btn btn-danger  mt-sm-4 text-capitalize" href="services" role="button">read more</a>
+					<p>AV Bank is headquartered in San Francisco with an office in New York and has been registered as an 
+            investment adviser with the SEC since its inception in 1994. The Firm manages approximately $18 billion in assets 
+            for a global institutional and retail investor base across an integrated platform of credit and equity strategies. 
+            The Firm invests in bank loans, high yield bonds, convertible bonds, structured products and equities in various structures and formats. 
+            AV Bank is an independent investment affiliate of Nuveen Investments Inc.</p>
+					<a class="btn btn-danger  mt-sm-4 text-capitalize" href="services" role="button">Just do it!</a>
 				</div>
 			</div>
 		</div>
@@ -100,15 +102,15 @@
 						<h3 class="agile-title">30+ years of experiences</h3>
 						<ul class="list-group mt-3">
 							<li class="list-group-item border-0">
-								<i class="fas fa-check mr-3"></i>Anything</li>
+								<i class="fas fa-check mr-3"></i>Enhancing wealth by helping you make smarter financial decisions.</li>
 							<li class="list-group-item border-0">
-								<i class="fas fa-check mr-3"></i>Dapibus ac facilisis in</li>
+								<i class="fas fa-check mr-3"></i>Helping you minimize income and estate taxes over the course of your lifetime.</li>
 							<li class="list-group-item border-0">
-								<i class="fas fa-check mr-3"></i>Morbi leo risus</li>
+								<i class="fas fa-check mr-3"></i>Ensuring your assets are protected from unwelcome third parties.</li>
 							<li class="list-group-item border-0">
-								<i class="fas fa-check mr-3"></i>Porta ac consectetur ac</li>
+								<i class="fas fa-check mr-3"></i>Reinforcing your legacy and values through a well thought out wealth transfer plan.</li>
 							<li class="list-group-item border-0">
-								<i class="fas fa-check mr-3"></i>Vestibulum at eros</li>
+								<i class="fas fa-check mr-3"></i>Ensuring charitable giving is done in a meaningful and impactful way for those interested.</li>
 						</ul>
 					</div>
 					<div class="col-lg-6 grad_video p-sm-5 p-4  order-lg-1 order-0">
@@ -141,9 +143,9 @@
 						<h3 class="agile-title">our team</h3>
 					</div>
 					<div class="col-lg-7 mt-lg-0 mt-3 px-lg-5">
-						<p>Donec consequat sapien ut leo cursus rhoncus. Nullam dui mi, vulputate ac metus at, semper varius orci. Nulla accumsan
-							ac elit in congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos Class aptent taciti
-							sociosqu ad litora torquent p himenaeos.</p>
+						<p>AV Bank has more than 80 employees, including more than 30 investment professionals. 
+              We work as a team to identify value across the capital structure, deliver desirable portfolio outcomes and provide excellent client service. 
+              Meet our leadership:</p>
 						<a class="btn btn-danger  mt-sm-4 text-capitalize scroll" href="#w3layouts_cs" role="button">read more</a>
 					</div>
 				</div>
@@ -252,7 +254,7 @@
 					<p>Donec consequat sapien ut leo cursus rhoncus. Nullam dui mi, vulputate ac metus at, semper varius orci. Nulla accumsan
 						ac elit in congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos Class aptent taciti
 						sociosqu ad litora torquent p himenaeos.</p>
-					<a class="btn btn-danger  mt-sm-4 text-capitalize" href="error" role="button">read more</a>
+					<a class="btn btn-danger  mt-sm-4 text-capitalize" href="error" role="button">Do it!</a>
 				</div>
 			</div>
 			<!-- //title description -->
