💂👶 Checkpoint ./views/index.ejs:2932288/2229 ./views/contact.ejs:2932288/768

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -251,9 +251,10 @@
 					<h3 class="agile-title">the new brand identity</h3>
 				</div>
 				<div class="col-lg-7 mt-lg-0 mt-3 px-lg-5">
-					<p>Donec consequat sapien ut leo cursus rhoncus. Nullam dui mi, vulputate ac metus at, semper varius orci. Nulla accumsan
-						ac elit in congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos Class aptent taciti
-						sociosqu ad litora torquent p himenaeos.</p>
+					<p>Since AV Bank’s founding more than 20 years ago, the firm’s culture has been characterized by a commitment to teamwork, 
+            integrity and mutual respect. Our culture is the underpinning of achieving the goals that we set as a firm. 
+            Symphony seeks to deliver value-added investment services, provide institutional quality client coverage, attract and retain talented asset 
+            management professionals and operate with the highest integrity in all aspects of the business.</p>
 					<a class="btn btn-danger  mt-sm-4 text-capitalize" href="error" role="button">Do it!</a>
 				</div>
 			</div>
@@ -263,54 +264,54 @@
 				<div class="col-lg-4 col-md-6">
 					<div class="img1 img-grid  d-flex align-items-end justify-content-center p-3">
 						<div class="img_text_w3ls">
-							<h4>Eget Integer sit amet.</h4>
+							<h4>Stock Options</h4>
 							<span> </span>
-							<p>Sed porttitor lectus nibh ras ultricies ligula sed magna dictum porta. </p>
+							<p> Learn how to hedge with financial derivatives</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6 my-md-0 mt-4">
 					<div class="img1 img2 img-grid  d-flex align-items-end justify-content-center p-3">
 						<div class="img_text_w3ls">
-							<h4>Eget Integer sit amet.</h4>
+							<h4>Convertible Bonds</h4>
 							<span> </span>
-							<p>Sed porttitor lectus nibh ras ultricies ligula sed magna dictum porta. </p>
+							<p> Learn how to use bonds in the economy </p>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6 my-lg-0 mt-4">
 					<div class="img1 img3 img-grid  d-flex align-items-end justify-content-center p-3">
 						<div class="img_text_w3ls">
-							<h4>Eget Integer sit amet.</h4>
+							<h4>Blockchain and Crypto</h4>
 							<span> </span>
-							<p>Sed porttitor lectus nibh ras ultricies ligula sed magna dictum porta. </p>
+							<p>How to use blockchain and cryptocurrency to bankrupt yourself </p>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6 mt-4">
 					<div class="img1 img5 img-grid  d-flex align-items-end justify-content-center p-3">
 						<div class="img_text_w3ls">
-							<h4>Eget Integer sit amet.</h4>
+							<h4>Dealing with crippling stock losses and depression</h4>
 							<span> </span>
-							<p>Sed porttitor lectus nibh ras ultricies ligula sed magna dictum porta. </p>
+							<p>Having investment discipline is important. Don't sell. Always be closing. </p>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6  mt-4">
 					<div class="img1 img4 img-grid  d-flex align-items-end justify-content-center p-3">
 						<div class="img_text_w3ls">
-							<h4>Eget Integer sit amet.</h4>
+							<h4>Always be closing.</h4>
 							<span> </span>
-							<p>Sed porttitor lectus nibh ras ultricies ligula sed magna dictum porta. </p>
+							<p>Always be closing. The best sales people are always closing.</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6 mt-4">
 					<div class="img1 img-grid  d-flex align-items-end justify-content-center p-3">
 						<div class="img_text_w3ls">
-							<h4>Eget Integer sit amet.</h4>
+							<h4> Making sound investment decisions</h4>
 							<span> </span>
-							<p>Sed porttitor lectus nibh ras ultricies ligula sed magna dictum porta. </p>
+							<p>Watch our webinar on financial decisions! </p>
 						</div>
 					</div>
 				</div>
