--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -30,9 +30,9 @@
                     <h3 class="agile-title">contact us</h3>
                 </div>
                 <div class="col-lg-7 mt-lg-0 mt-3 px-lg-5">
-                    <p>Donec consequat sapien ut leo cursus rhoncus. Nullam dui mi, vulputate ac metus at, semper varius orci.
-                        Nulla accumsan ac elit in congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra,
-                        per inceptos Class aptent taciti sociosqu ad litora torquent p himenaeos.</p>
+                    <p>If you would like to learn more about our existing institutional strategies, new products, or those currently in development, 
+                      please contact Marketing and Client Service at oktaisthebest@okta.com.
+For information regarding AV Bank’s mutual fund products, please speak to your financial advisor.</p>
                 </div>
             </div>
             <!-- //title description  -->
