⛳️🎉 Checkpoint ./views/footer.ejs:2932288/1 ./views/blog.ejs:2932288/2093 ./views/portfolio.ejs:2932288/1245 ./views/services.ejs:2932288/950

--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -30,9 +30,7 @@
                     <h3 class="agile-title">Portfolio image gallery</h3>
                 </div>
                 <div class="col-lg-7 mt-lg-0 mt-3 px-lg-5">
-                    <p>Donec consequat sapien ut leo cursus rhoncus. Nullam dui mi, vulputate ac metus at, semper varius orci.
-                        Nulla accumsan ac elit in congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra,
-                        per inceptos Class aptent taciti sociosqu ad litora torquent p himenaeos.</p>
+                    <p>We like to have this page and show calming pictures to comfort those with horrendous losses. In 2008, this page had over 200 billion hits!</p>
                     <a class="btn btn-danger  mt-sm-4 text-capitalize" href="services" role="button">read more</a>
                 </div>
             </div>
