--- a/views/services.ejs
+++ b/views/services.ejs
@@ -28,9 +28,10 @@
                 <h3 class="agile-title">our services</h3>
             </div>
             <div class="col-lg-7 mt-lg-0 mt-3 px-lg-5">
-                <p>Donec consequat sapien ut leo cursus rhoncus. Nullam dui mi, vulputate ac metus at, semper varius orci. Nulla
-                    accumsan ac elit in congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
-                    Class aptent taciti sociosqu ad litora torquent p himenaeos.</p>
+                <p>What’s in your garage? You might be practical when you choose cars — a versatile hatchback or minivan is just the thing.  
+                  Perhaps you prefer the rugged image of an SUV, or like to reward yourself with a convertible or luxury sedan. 
+                  Maybe you also have a classic muscle car or vintage sports car for weekend cruising.
+Whatever you drive, you know you need insurance for your car and assets. And that's why you need financial advisors.</p>
                 <a class="btn btn-danger  mt-sm-4  text-capitalize" href="portfolio" role="button">read more</a>
             </div>
         </div>
