--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -34,7 +34,7 @@
                         <div class="card-body">
                             <div class="d-sm-flex justify-content-between border-bottom py-2">
                                 <h5 class="blog-title card-title font-weight-bold">
-                                    <a href="single">Blog Title</a>
+                                    <a href="single">Getting Started</a>
                                 </h5>
                                 <div class="blog_w3icon">
                                     <span>
@@ -43,8 +43,7 @@
                                         <i class="fab fa-servicestack mr-2"></i>Funding Trends</span>
                                 </div>
                             </div>
-                            <p class="card-text mt-3">Cras ultricies ligula sed magna dictum porta. Mauris blandit aliquet elit, eget tincidunt nibh
-                                pulvinar a. Pellentesque in ipsum id orci porta sed magna dictum dapibus.</p>
+                            <p class="card-text mt-3">Get started with our top financial advisors who know everything and can predict the market.</p>
                             <a href="single" class="blog-btn text-dark">Read more</a>
                             <p class="card-text">
                                 <small class="text-muted">Last updated 3 mins ago</small>
@@ -66,7 +65,7 @@
                         <div class="card-body">
                             <div class="d-sm-flex justify-content-between border-bottom py-2">
                                 <h5 class="blog-title card-title font-weight-bold">
-                                    <a href="single">Blog Title</a>
+                                    <a href="single">How to use options to hedge your position</a>
                                 </h5>
                                 <div class="blog_w3icon">
                                     <span>
@@ -75,8 +74,7 @@
                                         <i class="fab fa-servicestack mr-2"></i>Quality Resourcing</span>
                                 </div>
                             </div>
-                            <p class="card-text mt-3">Cras ultricies ligula sed magna dictum porta. Mauris blandit aliquet elit, eget tincidunt nibh
-                                pulvinar a. Pellentesque in ipsum id orci porta sed magna dictum dapibus.</p>
+                            <p class="card-text mt-3">Learn different techniques of using options and learn what a call, put, and straddle option is.</p>
                             <a href="single" class="blog-btn text-dark">Read more</a>
                             <p class="card-text">
                                 <small class="text-muted">Last updated 15 mins ago</small>
@@ -98,7 +96,7 @@
                         <div class="card-body">
                             <div class="d-sm-flex justify-content-between border-bottom py-2">
                                 <h5 class="blog-title card-title font-weight-bold">
-                                    <a href="single">Blog Title</a>
+                                    <a href="single">Learn how to shake hands</a>
                                 </h5>
                                 <div class="blog_w3icon">
                                     <span>
@@ -107,8 +105,8 @@
                                         <i class="fab fa-servicestack mr-2"></i>Inventory Tracking</span>
                                 </div>
                             </div>
-                            <p class="card-text mt-3">Cras ultricies ligula sed magna dictum porta. Mauris blandit aliquet elit, eget tincidunt nibh
-                                pulvinar a. Pellentesque in ipsum id orci porta sed magna dictum dapibus.</p>
+                            <p class="card-text mt-3">In this blog, we explore the importance of a strong handshake and techniques to build trust with 
+                              your financial advisors.</p>
                             <a href="single" class="blog-btn text-dark">Read more</a>
                             <p class="card-text">
                                 <small class="text-muted">Last updated 3 hrs ago</small>
@@ -130,7 +128,7 @@
                         <div class="card-body">
                             <div class="d-sm-flex justify-content-between border-bottom py-2">
                                 <h5 class="blog-title card-title font-weight-bold">
-                                    <a href="single">Blog Title</a>
+                                    <a href="single">How to read a 10k</a>
                                 </h5>
                                 <div class="blog_w3icon">
                                     <span>
@@ -139,8 +137,8 @@
                                         <i class="fab fa-servicestack mr-2"></i>Financial Planning</span>
                                 </div>
                             </div>
-                            <p class="card-text mt-3">Cras ultricies ligula sed magna dictum porta. Mauris blandit aliquet elit, eget tincidunt nibh
-                                pulvinar a. Pellentesque in ipsum id orci porta sed magna dictum dapibus.</p>
+                            <p class="card-text mt-3">10ks are very long. Learn in this blog how to trudge through 80 page reports and the kinds of pains
+                          public companies have to face when reporting financials.</p>
                             <a href="single" class="blog-btn text-dark">Read more</a>
                             <p class="card-text">
                                 <small class="text-muted">Last updated 5 hrs ago</small>
