--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -13,7 +13,7 @@
 				<div class="col-md-4 my-md-0 my-4">
 					<img src="<%= assetsUrl %>f2.png" alt="" class="img-fluid">
 					<h4 class="feed-title my-3">Want to learn more?
-						<span>Conact Okta</span>
+						<span>Contact Okta</span>
 					</h4>
           <p>
             USA: (800) 588-1656<br>
