✈️🎱 Checkpoint ./views/services.ejs:2932288/685

--- a/views/services.ejs
+++ b/views/services.ejs
@@ -49,8 +49,8 @@ Whatever you drive, you know you need insurance for your car and assets. And tha
                         <div class="card">
                             <div class="card-block block-1">
                                 <h3 class="card-title">
-                                    <span>s</span>ervice 1</h3>
-                                <p class="card-text">Donec rutrum congue leo eget malesuada.</p>
+                                    <span>s</span>ervicing Hedging</h3>
+                                <p class="card-text">How to hedge 101.</p>
                                 <a href="#" title="Read more" class="read-more">Read more
                                     <i class="fa fa-angle-double-right ml-2"></i>
                                 </a>
@@ -61,8 +61,8 @@ Whatever you drive, you know you need insurance for your car and assets. And tha
                         <div class="card">
                             <div class="card-block block-4">
                                 <h3 class="card-title">
-                                    <span>s</span>ervice 2</h3>
-                                <p class="card-text">Donec rutrum congue leo eget malesuada.</p>
+                                    <span>s</span>ending it at all times</h3>
+                                <p class="card-text">Deliver great results. Just do it.</p>
                                 <a href="error" title="Read more" class="read-more">Read more
                                     <i class="fa fa-angle-double-right ml-2"></i>
                                 </a>
@@ -73,8 +73,8 @@ Whatever you drive, you know you need insurance for your car and assets. And tha
                         <div class="card">
                             <div class="card-block block-1">
                                 <h3 class="card-title">
-                                    <span>s</span>ervice 3</h3>
-                                <p class="card-text">Donec rutrum congue leo eget malesuada.</p>
+                                    <span>s</span>elling true cost.</h3>
+                                <p class="card-text">Don't let your dreams be dreams.</p>
                                 <a href="portfolio" title="Read more" class="read-more">Read more
                                     <i class="fa fa-angle-double-right ml-2"></i>
                                 </a>
@@ -85,8 +85,8 @@ Whatever you drive, you know you need insurance for your car and assets. And tha
                         <div class="card">
                             <div class="card-block block-4">
                                 <h3 class="card-title">
-                                    <span>s</span>ervice 4</h3>
-                                <p class="card-text">Donec rutrum congue leo eget malesuada.</p>
+                                    <span>s</span>ourcing good leads </h3>
+                                <p class="card-text">How to get the best leads.</p>
                                 <a href="#" title="Read more" class="read-more">Read more
                                     <i class="fa fa-angle-double-right ml-2"></i>
                                 </a>
@@ -97,8 +97,8 @@ Whatever you drive, you know you need insurance for your car and assets. And tha
                         <div class="card">
                             <div class="card-block block-1">
                                 <h3 class="card-title">
-                                    <span>s</span>ervice 5</h3>
-                                <p class="card-text">Donec rutrum congue leo eget malesuada.</p>
+                                    <span>s</span>izing your market.</h3>
+                                <p class="card-text">How do you size your market?</p>
                                 <a href="maintenance" title="Read more" class="read-more">Read more
                                     <i class="fa fa-angle-double-right ml-2"></i>
                                 </a>
@@ -109,8 +109,8 @@ Whatever you drive, you know you need insurance for your car and assets. And tha
                         <div class="card">
                             <div class="card-block block-4">
                                 <h3 class="card-title">
-                                    <span>s</span>ervice 6</h3>
-                                <p class="card-text">Donec rutrum congue leo eget malesuada.</p>
+                                    <span>s</span>elling your positions</h3>
+                                <p class="card-text">Selling your position is hard. Do it the right way.</p>
                                 <a href="soon" title="Read more" class="read-more">Read more
                                     <i class="fa fa-angle-double-right ml-2"></i>
                                 </a>
