🙄👜 Checkpoint ./views/accountPage.ejs:1886802/124

--- a/views/accountPage.ejs
+++ b/views/accountPage.ejs
@@ -13,7 +13,7 @@
 <%- include partials/openAccount.ejs %>
 <div class="services-bot-agile2 py-sm-5 py-3">
   
-  <div class="alert alert-primary" role="alert">
+  <div class="alert alert-warning alert-dismissible fade show" role="alert">
     <!--
     <div class="form-row">
       <div class="col-sm-3 my-1">
