--- a/views/accountPage.ejs
+++ b/views/accountPage.ejs
@@ -14,34 +14,20 @@
 <div class="services-bot-agile2 py-sm-5 py-3">
   
   <div class="alert alert-warning alert-dismissible fade show" role="alert">
-    <!--
-    <div class="form-row">
-      <div class="col-sm-3 my-1">
-        What is your preferred branch? 
-      </div>
-      <div class="col-auto my-1">
-      </div>
-    </div>
-  </div>
-  <!-- -->
-    What is your preferred branch?
-
-    
-      <form class="col-sm-2 d-inline-block">
-      <select class="form-control" id="exampleFormControlSelect2">
+    What is your preferred branch?    
+    <form class="col-sm-2 d-inline-block">
+      <select class="form-control">
         <option>Washington</option>
         <option>Springfield</option>
         <option>Franklin</option>
         <option>Greenville</option>
         <option>Bristol</option>
       </select>
-      </form>
-
-    
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-    <span aria-hidden="true">&times;</span>
-  </button>
-</div>
+    </form>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
 
   
   <button type="button" class="btn btn-danger btn-lg float-right av-button" onclick="openAccount()">Open Account</button>
