--- a/views/accountPage.ejs
+++ b/views/accountPage.ejs
@@ -13,7 +13,7 @@
 <%- include partials/openAccount.ejs %>
 <div class="services-bot-agile2 py-sm-5 py-3">
   
-  <div class="alert alert-warning alert-dismissible fade show" role="alert">
+  <div class="alert alert-warning alert-dismissible fade show" role="alert" id="branchPrompt">
     What is your preferred branch?    
     <form class="col-sm-2 d-inline-block">
       <select class="form-control">
