🧀🗾 Checkpoint ./public/js/accountVue.js:1886802/45 ./public/js/AVBank.js:1886802/165 ./views/accountPage.ejs:1886802/12

--- a/views/accountPage.ejs
+++ b/views/accountPage.ejs
@@ -13,7 +13,7 @@
 <%- include partials/openAccount.ejs %>
 <div class="services-bot-agile2 py-sm-5 py-3">
   
-  <div class="alert alert-warning alert-dismissible fade show" role="alert" id="branchPrompt" v-if="seen">
+  <div class="alert alert-warning alert-dismissible fade show" role="alert" id="branchPrompt">
     {{ message }}
     <form class="col-sm-2 d-inline-block">
       <select class="form-control">
