--- a/views/accountPage.ejs
+++ b/views/accountPage.ejs
@@ -13,11 +13,13 @@
 <%- include partials/openAccount.ejs %>
 <div class="services-bot-agile2 py-sm-5 py-3">
   
-  <div class="alert alert-warning alert-dismissible fade show" role="alert" id="branchPrompt">
-    {{ message }}
+  <div class="alert alert-warning alert-dismissible fade show" role="alert" id="userPrompt">
+    <%= userPrompt.description %>
     <form class="col-sm-2 d-inline-block">
       <select class="form-control">
-        <option v-for="branch in branches">{{ branch }}</option>
+        <% for(var i=0; i < userPrompt.options.length; i++) { %>
+        <option><%= userPrompt.options[i].title %></option>
+        <% } %>
       </select>
     </form>
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
