--- a/views/accountPage.ejs
+++ b/views/accountPage.ejs
@@ -21,7 +21,9 @@
     <form class="col-sm-2 d-inline-block">
       <select class="form-control">
         <% for(var i=0; i < locals.userPrompt.options.length; i++) { %>
-        <option><%= locals.userPrompt.options[i].title %></option>
+        <option value="<%= locals.userPrompt.options[i].const %>">
+          <%= locals.userPrompt.options[i].title %>
+        </option>
         <% } %>
       </select>
     </form>
