🐒🎨 Checkpoint ./views/about.ejs:2522170/4992 ./views/header.ejs:2522170/83 ./public/js/accountVue.js:2522170/140

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -40,6 +40,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- //webfonts -->
   <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
   <!-- Make Okta configuration available in a global variable-->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.2/ace.js"></script>
   <script>
   var config = {
     url: '<%= oidcConfig.url %>',
